--- a/HTML-BASIC/div.html
+++ b/HTML-BASIC/div.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- This page is created to test how divs works -->
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae earum
+    aperiam adipisci inventore autem eveniet repellendus eum libero. Aut nemo
+    atque maxime enim quod illum sunt illo reiciendis ratione aliquam!
   </body>
 </html>
