--- a/HTML-BASIC/index.html
+++ b/HTML-BASIC/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <p>Lidia è una befana</p>
 </head>
 <body>
-    
-</body>
-</html>
+<form action="www.davozzidesign.it"></form>
+<p>Username:</p>
+<input type="text" placeholder="Username">
+<br>
+<p>Password:</p>
+<input type="password" placeholder="password">
+<br>
+<p>First Name:</p>
+<input type="text" placeholder="First Name">
+<br>
+<p>Family Name:</p>
+<input type="text" placeholder="Family Name">
+<br>
+<p>Email:</p>
+<input type="email" placeholder="Email">
+<br>
+<p>Age:</p>
+<input type="number">
+<br>
+<p>Day of birth:</p>
+<input type="date">
+<br>
+<div>
+    <p>Genre:</p>
+    <input type="radio" name="sesso">
+    <label for="male">Male</label>
+</div>
+<div>
+    <input type="radio" name="sesso">
+<label for="female">Female</label>
+</div>
+<div>
+    <p>Nationality:</p>
+<select name="nationality">
+    <option value="1">English</option>
+    <option value="2">French</option>
+    <option value="3">Italian</option>
+    <option value="4">Spanish</option>
+    <option value="5">German</option>
+    <option value="6">USA</option>
+    <option value="7">Canadian</option>
+    <option value="8">French Canadian</option>
+    <option value="9">Finnish</option>
+    <option value="10">Norway</option>
+    <option value="11">Swedish</option>
+</select>
+</div>
+<div>
+    <p>Knowledge:</p>
+    <input type="checkbox" name="checkbox"
+         checked>
+  <label for="scales">Javascript</label>
+  <br>
+  <input type="checkbox" name="checkbox"
+  checked>
+<label for="scales">Php</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">Docker</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">HTML</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">CSS</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">vue.js</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">React</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">Git</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">Gitlab</label>
+<br>
+<input type="checkbox" name="checkbox"
+checked>
+<label for="scales">Github</label>
+</div>
+<br>
+<div>
+    <input type="file" name="Choose a file">
+</div>
